--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@callstack/react-theme-provider": "^3.0.9",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-native-vector-icons/fontawesome": "^4.7.0-alpha.9",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "^0.74.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.31.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
